add link to index

--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,7 @@
 	<body>
 		<ul>
 			<li><a href="starfield/">Starfield</a></li>
+			<li><a href="starfield-with-ship/">Starfield with ship</a></li>
 		</ul>
 	</body>
 </html>
