now with keyboard

--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,7 @@
 		<ul>
 			<li><a href="starfield/">Starfield</a></li>
 			<li><a href="starfield-with-ship/">Starfield with ship</a></li>
+			<li><a href="starfield-with-ship-and-keyboard/">Starfield with ship and keyboard</a></li>
 		</ul>
 	</body>
 </html>
