shuttle can't move off of screen

--- a/static/starfield-with-ship-and-keyboard/index.html
+++ b/static/starfield-with-ship-and-keyboard/index.html
@@ -49,6 +49,11 @@
 				} else if (window.keydown.down) {
 					this.y += 10;
 				}
+				if (this.y < 0) {
+					this.y = Animation.canvas.height;
+				} else if (this.y > Animation.canvas.height) {
+					this.y = 0;
+				}
 			},
 			create: function() {
 				var ship = Object.create(Ship);
