now with shooting

--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,7 @@
 			<li><a href="starfield/">Starfield</a></li>
 			<li><a href="starfield-with-ship/">Starfield with ship</a></li>
 			<li><a href="starfield-with-ship-and-keyboard/">Starfield with ship and keyboard</a></li>
+			<li><a href="starfield-with-ship-and-keyboard-and-shooting/">Starfield with ship and keyboard and shooting</a></li>
 		</ul>
 	</body>
 </html>
